--- a/WS101 INDIVIDUAL/style.css
+++ b/WS101 INDIVIDUAL/style.css
@@ -17,7 +17,7 @@ body {
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
-    background-image: url(images/doodle.jpg);
+    background-image: url(doodle.jpg);
     background-size: cover;
     color: #000000;
     transition: 0.75s;
