--- a/WS101 INDIVIDUAL/style2.css
+++ b/WS101 INDIVIDUAL/style2.css
@@ -31,7 +31,7 @@ header {
     left: 0;
     width: 100%;
     padding: 2rem 9%;
-    background-image: url(images/doodle.jpg);
+    background-image: url(doodle.jpg);
     filter: drop-shadow(10px);
     display: flex;
     justify-content: space-between;
